--- a/src/components/Navigation.scss
+++ b/src/components/Navigation.scss
@@ -1,7 +1,14 @@
 .navigation-container {
-    display: flex;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  @media screen and (min-width: 768px) {
     flex-direction: row;
     justify-content: space-between;
-    max-width: 960px;
     margin: 0 auto;
+    max-width: 768px;
+  }
+  @media screen and (min-width: 960px) {
+    max-width: 960px;
+  }
 }
