--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif; }
+html {
+  height: 100%; }
+  html body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif; }
+    html body #root {
+      height: 100%; }
