--- a/src/components/Login.scss
+++ b/src/components/Login.scss
@@ -1,25 +1,26 @@
 .login-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  & > div {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    height: 100%;
-    &>div {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 500px;
-        form {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            input {
-                padding: 4px;
-                margin-right: 4px;
-            }
-        }
-        img {
-            width: 40px;
-        }
+    width: 500px;
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      input {
+        padding: 4px;
+        margin-right: 4px;
+        margin-bottom: 8px;
+      }
     }
+    img {
+      width: 40px;
+    }
+  }
 }
