--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,54 @@ html {
         font-family: sans-serif;
         #root {
             height: 100%;
+            button {
+                font-size: 14px;
+                padding: 12px;
+                background: none;
+                position: relative;
+                border: none;
+                cursor: pointer;
+                transition: all 0.2s linear;
+                &:before,
+                &:after {
+                    transition: all 0.1s linear;
+                    border: 2px solid black;
+                    content: '';
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                }
+                &:after {
+                    left: 0;
+                    top: 0;
+                }
+                &:before {
+                    left: -4px;
+                    top: -4px;
+                }
+                &:focus {
+                    outline: none;
+                }
+                &:active {
+                    border-style: none;
+                    background-color: grey;
+                }
+                &:hover,
+                &:active {
+                    &:after {
+                        left: 1px;
+                        top: 1px;
+                    }
+                    &:before {
+                        left: -5px;
+                        top: -5px;
+                    }
+                }
+            }
+            .active {
+                background-color: black;
+                color: white;
+            }
         }
     }
 }
