--- a/src/components/Navigation.scss
+++ b/src/components/Navigation.scss
@@ -1,29 +1,44 @@
 .navigation {
-  background-color: #eff2e9;
-  .navigation-container {
-    width: 100%; // dont display until 768
-    display: none;
-    padding: 10px;
-    @media screen and (min-width: 768px) {
-      display: flex;
-      flex-direction: column;
-      flex-direction: row;
-      justify-content: space-between;
-      margin: 0 auto;
-      max-width: 768px;
+    background-color: #eff2e9;
+    .navigation-container {
+        width: 100%; // dont display until 768
+        display: none;
+        padding: 10px;
+        @media screen and (min-width: 768px) {
+            display: flex;
+            flex-direction: column;
+            flex-direction: row;
+            justify-content: center;
+            margin: 0 auto; // max-width: 768px;
+        }
+        @media screen and (min-width: 960px) {
+            //   max-width: 960px;
+            // max-width: 1100px;
+        }
+        a {
+            min-width: 250px;
+            display: inline-flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            line-height: 40px;
+            font-size: 20px;
+            text-transform: uppercase;
+            font-weight: bold;
+            text-decoration: none;
+            &:active,
+            &:visited {
+                color: initial;
+            }
+            &.active {
+                justify-content: space-around;
+                svg line {
+                    display: initial;
+                }
+            }
+            svg line {
+                display: none;
+            }
+        }
     }
-    @media screen and (min-width: 960px) {
-      max-width: 960px;
-    }
-    a {
-      font-size: 20px;
-      text-transform: uppercase;
-      font-weight: bold;
-      text-decoration: none;
-      &:active,
-      &:visited {
-        color: initial;
-      }
-    }
-  }
 }
