--- a/src/components/SiteContainer.scss
+++ b/src/components/SiteContainer.scss
@@ -3,6 +3,7 @@
     background-image: url('../imgs/floral_head.png');
     background-position: center top, center top;
     background-repeat: no-repeat, no-repeat;
+    color: #3F5647;
     .app-header {
         min-height: 300px;
         display: flex;
