--- a/src/components/Admin.scss
+++ b/src/components/Admin.scss
@@ -1,5 +1,4 @@
 table {
-    font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: calc(100% - 40px);
     margin: 20px;
@@ -21,7 +20,6 @@ table {
         padding-top: 12px;
         padding-bottom: 12px;
         text-align: left;
-        background-color: #4caf50;
-        color: white;
+        background-color: #eff2e9;
     }
 }
