--- a/src/components/Rsvp.scss
+++ b/src/components/Rsvp.scss
@@ -1,8 +1,12 @@
 form {
     display: flex;
     flex-direction: column;
-    max-width: 980px;
+    max-width: 930px;
     margin: 20px auto;
+    .loading {
+        text-align: center;
+        margin-top: 20px;
+    }
     .guest-rows-container {
         display: flex;
         flex-direction: column;
@@ -36,8 +40,8 @@ form {
             border: 1px solid #cccccc;
             border-radius: 4px;
             box-sizing: border-box;
-            margin-right: 20px;
-            width: 220px;
+            margin-right: 10px;
+            width: 230px;
             color: hsl(0, 0%, 50%);
             font-size: 16px;
         }
@@ -52,9 +56,14 @@ form {
     /* For Firefox */
     input[type='number'] {
         -moz-appearance: textfield;
-        padding: 5px;
         width: 18px;
         text-align: center;
+        height: 38px;
+        padding: 0px 8px;
+        border: 1px solid #cccccc;
+        border-radius: 4px;
+        color: hsl(0, 0%, 50%);
+        font-size: 16px;
     }
     /* Webkit browsers like Safari and Chrome */
     input[type='number']::-webkit-inner-spin-button,
