--- a/src/index.scss
+++ b/src/index.scss
@@ -20,7 +20,7 @@ html {
                 &:before,
                 &:after {
                     transition: all 0.1s linear;
-                    border: 2px solid black;
+                    border: 2px solid #3f5647;
                     content: '';
                     position: absolute;
                     width: 100%;
@@ -53,7 +53,7 @@ html {
                     }
                 }
                 &.active {
-                    background-color: black;
+                    background-color: #3f5647;
                     color: white;
                 }
             }
