--- a/src/components/Travel.scss
+++ b/src/components/Travel.scss
@@ -1,9 +1,31 @@
-.hotels-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    &>div {
-        flex-basis: 33%;
-        flex-shrink: 0;
+.places-to-stay {
+    padding: 40px 20px;
+    .places-container {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        &>div {
+            width: 33%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            
+            .hotel-content {
+                width: 300px;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                text-align: left;
+
+                & > div {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center; 
+                                span {
+                                    margin-right: 10px;
+                                }
+                }
+            }
+        }
     }
 }
