--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@ html {
         margin: 0;
         padding: 0;
         font-family: sans-serif;
+        overflow-x: hidden;
         #root {
             height: 100%;
             button {
