--- a/src/components/Rsvp.scss
+++ b/src/components/Rsvp.scss
@@ -3,7 +3,7 @@ form {
     flex-direction: column;
     max-width: 930px;
     margin: 20px auto;
-    .loading {
+    .message {
         text-align: center;
         margin-top: 20px;
     }
