--- a/src/index.scss
+++ b/src/index.scss
@@ -23,8 +23,20 @@ html {
         font-family: 'Sharp Sans', sans-serif;
         color: #3E5244;
         font-weight: normal;
+        overflow-x: hidden;
+        overflow-y: visible;
+        height: 100%;
+
         #root {
             height: 100%;
+            display: flex;
+            flex-direction: column;
+
+            &> div {
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+            }
             button {
                 text-transform: uppercase;
                 font-weight: bold;
@@ -78,10 +90,11 @@ html {
         }
 
         footer {
-            background-size: cover;
-            min-height: 250px;
-            background-repeat: no-repeat;
-            background-image: url('../public/images/footer.png');
+            display: flex;
+            align-items: flex-start;
+            img {
+                width: 100%;
+            }
         }
     }
 }
