--- a/src/components/Login.scss
+++ b/src/components/Login.scss
@@ -3,12 +3,21 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  flex-grow: 1;
+  img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
   form {
-    width: 500px;
+    max-width: 500px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: stretch;
+    padding: 0 20px;
+    box-sizing: border-box;
     input {
       padding: 4px;
       margin-right: 4px;
