--- a/src/components/Navigation.scss
+++ b/src/components/Navigation.scss
@@ -1,3 +1,5 @@
+@import '../vars.scss';
+
 .navigation {
     background-color: #49574C;
     color: white;
@@ -17,7 +19,7 @@
             // max-width: 1100px;
         }
         a {
-            min-width: 250px;
+            min-width: 180px;
             display: inline-flex;
             flex-direction: row;
             justify-content: center;
@@ -26,6 +28,9 @@
             font-size: 18px;
             text-transform: uppercase;
             text-decoration: none;
+            @media screen and (min-width: $bp1) {
+                min-width: 250px;
+            }
             &:active,
             &:visited {
                 color: white;
