--- a/src/components/Rsvp.scss
+++ b/src/components/Rsvp.scss
@@ -28,8 +28,14 @@ form {
     .guest-row {
         margin-bottom: 20px;
         display: flex;
-        flex-direction: row;
-        align-items: center;
+        flex-direction: column;
+        align-items: flex-start;
+        
+        @media screen and (min-width: $bp1) {
+            align-items: center;
+            flex-direction: row;
+        }        
+
         &>* {
             text-align: left;
         }
@@ -40,6 +46,7 @@ form {
         .rsvp-value,
         .diet-value {
             width: 340px;
+            max-width: 100%;
         }
         .rsvp-value {
             margin-right: 10px;
