--- a/src/components/SiteContainer.scss
+++ b/src/components/SiteContainer.scss
@@ -3,22 +3,23 @@
     text-align: center;
     flex-grow: 1;
     .app-header {
-        min-height: 190px;
+        min-height: 180px;
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
         position: relative;
-        @media screen and (min-width: $bp1) {
-            min-height: 210px;
+        @media screen and (min-width: $bp0) {
+            min-height: 190px;
             .app-title {
                 margin: 20px;
+                margin-top: 20px;
             }
+        }
+        @media screen and (min-width: $bp1) {
+            min-height: 210px;
         }
         @media screen and (min-width: $bp2) {
             min-height: 240px;
-            .app-title {
-                margin: 20px;
-            }
         }
         img {
             position: absolute;
@@ -28,6 +29,7 @@
         }
         .app-title {
             margin: 10px;
+            margin-top: 70px;
             font-size: 36px;
             display: flex;
             flex-direction: row;
