--- a/src/index.scss
+++ b/src/index.scss
@@ -41,8 +41,12 @@ html {
 
                 .main-content {
                     max-width: $content-width;
-                    margin: 50px 20px 20px 20px;
+                    margin: 20px;
                     overflow: hidden;
+
+                    @media screen and (min-width: $bp0) {
+                        margin: 50px 20px 20px 20px;
+                    }      
 
                     @media screen and (min-width: $bp1) {
                         margin: 50px auto 20px auto;
@@ -76,6 +80,7 @@ html {
             text-transform: uppercase;
             font-weight: 500;
             font-size: 14px;
+            margin: 5px;
             padding: 12px;
             background: none;
             position: relative;
