--- a/src/components/Info.scss
+++ b/src/components/Info.scss
@@ -34,6 +34,7 @@
             user-select: none;
             span {
                 margin-right: 10px;
+                font-size: 2em;
             }
         }
         .info-content {
