--- a/src/components/SiteContainer.scss
+++ b/src/components/SiteContainer.scss
@@ -26,6 +26,7 @@
             width: 100%;
             pointer-events: none;
             top: 0;
+            z-index: 1;
         }
         .app-title {
             margin: 10px;
