--- a/src/components/Info.scss
+++ b/src/components/Info.scss
@@ -39,6 +39,17 @@
         }
         .info-content {
             padding: 0 20px;
+
+            h3 {
+                text-align: center;
+                font-size: 20px;
+                text-transform: uppercase;
+                margin-bottom: 30px;
+            }
+
+            & > div:not(:first-of-type) h3 {
+                margin: 30px;
+            }
         }
     }
     .ceremony-details {
@@ -72,7 +83,6 @@
                 text-align: left;
                 h4 {
                     margin: 10px 0;
-                    text-transform: uppercase;
                     font-weight: 600;
                     font-size: 18px;
                 }
