--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -6,9 +6,9 @@
     img {
         width: 100%;
     }
-    
+
     h3 {
-        border-bottom: 3px solid $text-color;;
+        border-bottom: 3px solid $text-color;
         padding-top: 5px;
         line-height: 48px;
         display: inline-block;
@@ -28,6 +28,16 @@
     }
 
     .welcome {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        img {
+            max-width: 360px;
+            width: 100%;
+            margin-bottom: 30px;
+        }
+
         h3 {
             margin-top: 0;
         }
